2002-08-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus_policy.c (fpol_query_allow_set_focus):
	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/icons.c (DeIconify):
	(DeIconify):
	* fvwm/events.c (HandleButtonPress):
	(HandleEnterNotify):
	(HandleLeaveNotify):
	(HandleMapNotify):
	(HandleMapRequestKeepRaised):
	* fvwm/add_window.c (CaptureAllWindows):
	* fvwm/virtual.c (UnmapDesk):
	(MapDesk):
	(do_move_window_to_desk):
	* fvwm/update.c (flush_window_updates):
	* fvwm/focus.c (set_focus_model):
	(DeleteFocus):
	(__restore_focus_after_unmap):
	much more GFPR work; these patches may break lots of things

	* fvwm/focus.c (set_focus_to_fwin):
	(__activate_window_by_command):
	(SetFocusWindow):
	(ReturnFocusWindow):
	(DeleteFocus):
	(ForceDeleteFocus):
	renamed MoveFocus to set_focus_to_fwin

2002-08-07  Mikhael Goikhman  <migo@homemail.com>

	* libs/Fft.c (FftDrawString):
	removed redudant and buggy code that called DrawStringFunc before
	this pointer gets initialized

	* fvwm/focus.c (focus_query_click_to_raise):
	fixed possibly-uninitialized variable warning

	* fvwm/Makefile.am:
	specify stroke includes before Xft includes, may improve some cases

2002-08-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	fixed sys/time.h detection

	* fvwm/events.c (HandleMappingNotify):
	* libs/Bindings.c (AddBinding):
	added MappingNotify event handler

	* fvwm/events.c (HandleMapRequest):
	removed debug code

	* fvwm/events.c (InitEventHandlerJumpTable):
	another attempt at handling "unknown" modifiers in key bindings

2002-08-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (is_on_top_of_layer_ignore_rom):
	* fvwm/add_window.c (destroy_window):
	* fvwm/focus.c (focus_grab_buttons):
	fixed core dump

2002-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (focus_force_refresh_focus):
	* fvwm/events.c (HandleEnterNotify):
	(HandlePropertyNotify):
	(HandleButtonPress):
	* fvwm/icons.c (DeIconify):
	* fvwm/virtual.c (MapDesk):