@@ -1,4 +1,12 @@
+2002-08-09  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/focus.c (focus_grab_buttons_on_pointer_window):
+	clean up
+
 2002-08-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/focus.c (focus_grab_buttons):
+	split into two fucntions and fixed a bug with ungrabbing buttons
 
 	* fvwm/focus_policy.c (fpol_query_allow_set_focus):
 	* fvwm/style.c (parse_and_set_window_style):
